State turns opace once it is hovered on

--- a/Q1 AusMap/AusMap.html
+++ b/Q1 AusMap/AusMap.html
@@ -10,6 +10,7 @@
 	<title>Map of Australia</title>
 	<!--Using D3 and SVG to draw a bar chart from a CSV file  -->
 
+	<link rel="stylesheet" href="AusMap Stylesheet.css">
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script async src="AusMapScript.js"></script>
 
