Got lines appearing on chart in red

--- a/Q3_MutiLineGraph/Q3LineGraph.html
+++ b/Q3_MutiLineGraph/Q3LineGraph.html
@@ -10,16 +10,11 @@
 	<title>Task 7.1 D3 Loading data from CSV file</title>
 	<!--Using D3 and SVG to draw a bar chart from a CSV file  -->
 
-	<script src="https://d3js.org/d3.v6.min.js"></script>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script async src="Q3 Line Graph.js"></script>
 	<style>
-		.area {
-		fill: slategrey;
-		stroke: slategrey;
-		stroke-width: 0.5;
-		}
 		.line {
 			stroke: red;
-			stroke-dasharray: 5,5;
 		}
 	</style>
 
@@ -29,7 +24,7 @@
 
 	<h1>Drawing with Data from CSV file</h1>
 	<p id="chart"></p>
-		<script src="Task 7.1.js"></script>
+
 
 
 	<br>
