--- a/Q3_MutiLineGraph/Q3LineGraph.html
+++ b/Q3_MutiLineGraph/Q3LineGraph.html
@@ -10,12 +10,16 @@
 	<title>Task 7.1 D3 Loading data from CSV file</title>
 	<!--Using D3 and SVG to draw a bar chart from a CSV file  -->
 
-	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script async src="Q3 Line Graph.js"></script>
 	<style>
-		.line {
-			stroke: red;
-		}
+	.grid line {
+    stroke: lightgrey;
+    opacity: 0.7;
+}
+.grid path {
+      stroke-width: 0;
+}
 	</style>
 
 </head>
