Changed Colours up

--- a/Q3_MutiLineGraph/Q3LineGraph.html
+++ b/Q3_MutiLineGraph/Q3LineGraph.html
@@ -7,7 +7,7 @@
 	<meta name="keywords"		  content="HTML, CSS, JS, D3, CSV"/>
 	<meta name="author"			  content="Ajay Rajkumar"/>
 
-	<title>Task 7.1 D3 Loading data from CSV file</title>
+	<title>Energy Usage By Industry</title>
 	<!--Using D3 and SVG to draw a bar chart from a CSV file  -->
 
 	<script src="https://d3js.org/d3.v6.min.js"></script>
@@ -26,7 +26,7 @@
 
 <body>
 
-	<h1>Drawing with Data from CSV file</h1>
+	<h1>Energy Usage By Industry</h1>
 	<p id="chart"></p>
 
 
