Get graph outline to draw with button press

--- a/Q1 LineGraph/Q1_LineGraph.html
+++ b/Q1 LineGraph/Q1_LineGraph.html
@@ -19,7 +19,7 @@
 
 	<h1>Drawing with Data from CSV file</h1>
 	<p id="chart"></p>
-
+	<button type="button" id = "Non Renewable" onclick="nonRenew()">Click Me!</button>
 
 
 	<br>
