Got buttons to show different graphs based on Renewable or Non Renewable

--- a/Q1 LineGraph/Q1_LineG.html
+++ b/Q1 LineGraph/Q1_LineG.html
@@ -3,23 +3,24 @@
 
 <head>
 	<meta charset="UTF-8"/>
-	<meta name="description"	content="Data Visualisation Exercise 2.4"/>
+	<meta name="description"	content="Data Vis Project Q1 Line Graphs"/>
 	<meta name="keywords"		  content="HTML, CSS, JS, D3, CSV"/>
 	<meta name="author"			  content="Ajay Rajkumar"/>
 
-	<title>Task 7.1 D3 Loading data from CSV file</title>
+	<title>Q1 Line Graphs</title>
 	<!--Using D3 and SVG to draw a bar chart from a CSV file  -->
 
 	<script src="https://d3js.org/d3.v6.min.js"></script>
-	<script async src="Q1_LineGraph.js"></script>
+	<script async src="Q1_LineG.js"></script>
 
 </head>
 
 <body>
 
-	<h1>Drawing with Data from CSV file</h1>
+	<h1>Renewable and Non Renewable Graphs</h1>
 	<p id="chart"></p>
-	<button type="button" id = "Non Renewable" onclick="nonRenew()">Click Me!</button>
+	<button type="button" id = "Non Renewable" onclick="nonRenew()">Non Renewable Graph</button>
+	<button type="button" id = "Renewable" onclick="Renew()">Renewable Graph</button>
 
 
 	<br>
