--- a/Q1 LineGraph/Q1_LineG.html
+++ b/Q1 LineGraph/Q1_LineG.html
@@ -13,6 +13,15 @@
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 	<script async src="Q1_LineG.js"></script>
 
+	<style>
+		.grid line {
+			stroke: lightgrey;
+			opacity: 0.7;
+		}
+		.grid path {
+			stroke-width: 0;
+		}
+	</style>
 </head>
 
 <body>
