changes to stacked bar chart

--- a/Q3 stacked bar chart/Q3_segmentedBarChart.html
+++ b/Q3 stacked bar chart/Q3_segmentedBarChart.html
@@ -7,10 +7,10 @@
 	<meta name="keywords"		content="csv"/>
 	<meta name="author"			content="Aaron Cinel"/>
 	
-	<title>Task 7.1</title>
+	<title>Stacked bar chart</title>
 	
     <script src="https://d3js.org/d3.v6.min.js"></script>
-	<script src="Q3_segmentedBarChart.js"></script>
+	<script src="test.js"></script>
 
 </head>
 <body>
