working on pie chart

--- a/Q2 pie chart/Q2_pieChart.html
+++ b/Q2 pie chart/Q2_pieChart.html
@@ -7,9 +7,9 @@
 	<meta name="keywords"		content="HTML, CSS"/>
 	<meta name="author"			content="Aaron Cinel"/>
 	
-	<title>Q2_BarChart</title>
+	<title>Pie Chart</title>
 
-    <script src="Q2_pieChart.js"></script>
+    <script src="Q2_pieChart - Copy - Copy.js"></script>
 	
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 
