trying to add pop up box

--- a/Q2 pie chart/Q2_pieChart.html
+++ b/Q2 pie chart/Q2_pieChart.html
@@ -9,7 +9,7 @@
 	
 	<title>Pie Chart</title>
 
-    <script src="Q2_pieChart - Copy - Copy.js"></script>
+    <script src="Q2_pieChart - Copy.js"></script>
 	
 	<script src="https://d3js.org/d3.v6.min.js"></script>
 
