--- a/Q3 stacked bar chart/Q3_segmentedBarChart.html
+++ b/Q3 stacked bar chart/Q3_segmentedBarChart.html
@@ -10,7 +10,7 @@
 	<title>Stacked bar chart</title>
 	
     <script src="https://d3js.org/d3.v6.min.js"></script>
-	<script src="test.js"></script>
+	<script src="Q3_segmentedBarChart.js"></script>
 
 </head>
 <body>
