--- a/website/Q1.html
+++ b/website/Q1.html
@@ -43,7 +43,7 @@
             They are the 3rd largest producer of renewable energy and the smallest producer of non-renewable energy.  Data was not available for ACT. </p>
           <br>
           <br>
-          <h2>Total energy consumed in each state by industry</h2>
+          <h2>Electricity Produced through Renewable and Non-Renewable Fuels</h2>
           <p id ="MultiChart"></p>
           <button type="button" id = "NonRenewable" onclick="nonRenew()">Non Renewable Graph</button>
         	<button type="button" id = "Renewable" onclick="Renew()">Renewable Graph</button>
