--- a/website/Q3.html
+++ b/website/Q3.html
@@ -37,7 +37,7 @@
 						console.log(d3.selectAll("p"))
 					</script>
 
-          <h2>Energy Usage by Industry</h2>
+          <h2>Energy Usage by Industry between 1990 and 2020</h2>
           <p id = "line"></p>
           <p>Figure 1.</p>
           <p>To interact with this chart, hover over the line to see what industry that line is portraying. This graph is showing<br>
