--- a/website/Q1.html
+++ b/website/Q1.html
@@ -13,16 +13,18 @@
 </head>
 <body>
 	<header>
-	<h1>Understanding the movement in energy production from non-renewable to renewable methods in Australia</h1>
+	<h1>Australian Energy Insights</h1>
 	</header>
 
 	<nav><!--navigation bar-->
-        <a href="Q1.html">
-            Question 1</a>
-        <a href="Q2.html">
-            Question 2</a>
-        <a href="Q3.html">
-            Question 3</a>
+      <a href="index.html">
+          Home</a>
+      <a href="Q1.html">
+          Production</a>
+      <a href="Q2.html">
+          Emissions</a>
+      <a href="Q3.html">
+          Consumption</a>
     </nav>
 
 	<article class="flex-container">
@@ -33,7 +35,8 @@
 					<script>
 						console.log(d3.selectAll("p"))
 					</script>
-          <h2>Total Energy Produced By State</h2>
+          <h2>Understanding the movement in energy production from non-renewable to renewable methods in Australia</h2>
+          <h3>Total Energy Produced By State</h3>
           <p id = "map"></p>
           <p>Figure 1.</p>
           <p>The Figure 1 visualisation shows a map of Australia split into its different states. To interact with it, hover the mouse over the state you would</br>
@@ -43,7 +46,7 @@
             They are the 3rd largest producer of renewable energy and the smallest producer of non-renewable energy.  Data was not available for ACT. </p>
           <br>
           <br>
-          <h2>Electricity Produced through Renewable and Non-Renewable Fuels</h2>
+          <h3>Electricity Produced through Renewable and Non-Renewable Fuels</h3>
           <p id ="MultiChart"></p>
           <button type="button" id = "NonRenewable" onclick="nonRenew()">Non Renewable Graph</button>
         	<button type="button" id = "Renewable" onclick="Renew()">Renewable Graph</button>
