--- a/website/Q2.html
+++ b/website/Q2.html
@@ -14,16 +14,18 @@
 </head>
 <body>
 	<header>
-	<h1>Understanding the level of CO2 emissions relative to the type of energy produced</h1>
+	<h1>Australian Energy Insights</h1>
 	</header>
 
 	<nav><!--navigation bar-->
-        <a href="Q1.html">
-            Question 1</a>
-        <a href="Q2.html">
-            Question 2</a>
-        <a href="Q3.html">
-            Question 3</a>
+        <a href="index.html">
+			Home</a>
+		<a href="Q1.html">
+			Production</a>
+		<a href="Q2.html">
+			Emissions</a>
+		<a href="Q3.html">
+			Consumption</a>
     </nav>
 
 	<article class="flex-container">
@@ -34,8 +36,8 @@
 					<script>
 						console.log(d3.selectAll("p"))
 					</script>
-					
-					<h2>Total emisions by state</h2>
+					<h2>Understanding the level of CO2 emissions relative to the type of energy produced</h2>
+					<h3>Total emisions by state</h3>
 					<p id ="pie"></p>
 					<p>Figure 1.</p>
 					<p>As shown in Figure 1. the large majority of emissions (t CO2-e) within Australia occurred in QLD with 52,727,914, NSW with 50074503, and VIC with 41,443,811.<br>
