--- a/website/Q3.html
+++ b/website/Q3.html
@@ -16,16 +16,18 @@
 
 <body>
 	<header>
-	<h1>Understanding the breakdown of industries and the amount of energy consumed</h1>
+	<h1>Australian Energy Insights</h1>
 	</header>
 
 	<nav><!--navigation bar-->
-        <a href="Q1.html">
-            Question 1</a>
-        <a href="Q2.html">
-            Question 2</a>
-        <a href="Q3.html">
-            Question 3</a>
+        <a href="index.html">
+			Home</a>
+		<a href="Q1.html">
+			Production</a>
+		<a href="Q2.html">
+			Emissions</a>
+		<a href="Q3.html">
+			Consumption</a>
     </nav>
 
 	<article class="flex-container">
@@ -36,17 +38,17 @@
 					<script>
 						console.log(d3.selectAll("p"))
 					</script>
-
-          <h2>Energy Usage by Industry between 1990 and 2020</h2>
-          <p id = "line"></p>
-          <p>Figure 1.</p>
-          <p>To interact with this chart, hover over the line to see what industry that line is portraying. This graph is showing<br>
-            the trends in energy consumption from 1990 to 2020 by different industries in Australia. The y-axis is in petajoules. <br>
-            Certain industries are consistent in their energy usage such as residential which has not changed much over the years. <br>
-            However, mining and transport have had large increases especially in the last decade. </p>
-          <br>
-          <br>
-					<h2>Total energy consumed in each state by industry</h2>
+					<h2>Understanding the breakdown of industries and the amount of energy consumed</h2>
+					<h3>Energy Usage by Industry between 1990 and 2020</h3>
+					<p id = "line"></p>
+					<p>Figure 1.</p>
+					<p>To interact with this chart, hover over the line to see what industry that line is portraying. This graph is showing<br>
+						the trends in energy consumption from 1990 to 2020 by different industries in Australia. The y-axis is in petajoules. <br>
+						Certain industries are consistent in their energy usage such as residential which has not changed much over the years. <br>
+						However, mining and transport have had large increases especially in the last decade. </p>
+					<br>
+					<br>
+					<h3>Total energy consumed in each state by industry</h3>
 					<p id ="stacked"></p>
 					<p>Figure 2.</p>
 					<p>As shown in Figure 2. NSW, Vic, Qld, and WA are the largest energy consuming states in Australia.<br>
